--- a/sentry.properties
+++ b/sentry.properties
@@ -1,5 +1,1 @@
-defaults.url=# your base url
-defaults.org=# your org
-defaults.project=# your project
-auth.token=# your auth token
-cli.executable=# [optional] path to the cli executable
+defaults.url=https://sentry.io/
